atlassian-jira-software/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: atlassian-jira-software
  namespace: devops
  labels:
    app: atlassian-jira-software
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: atlassian-jira-software
    spec:
      containers:
        - name: atlassian-jira-software
          image: cptactionhank/atlassian-jira-software:7.9.0
          volumeMounts:
            - name: data-volume
              mountPath: /var/atlassian/jira
          ports:
            - containerPort: 8080
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 15
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
          resources:
            limits:
              cpu: 800m
              memory: 2Gi
            requests:
              cpu: 0
              memory: 2Gi
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: atlassian-jira-software
