atlassian-jira-software/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: atlassian-jira-software
  namespace: devops
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: atlassian-jira-software
  selector:
    app: atlassian-jira-software
